force-app/main/default/objects/CommercientSF__InvMasterPlus__c/CommercientSF__InvMasterPlus__c.object-meta.xml
<CustomObject>
    <label>Syspro Inventory Master Plus</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Inventory Master Pluss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>