force-app/main/default/objects/CommercientSF__InvMasterPlus__c/fields/CommercientSF__BuildTime__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BuildTime__c</fullName>
    <description>BuildTime</description>
    <label>BuildTime</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>