force-app/main/default/objects/CommercientSF__InvMasterPlus__c/fields/CommercientSF__ColorCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ColorCode__c</fullName>
    <description>ColorCode</description>
    <label>ColorCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>