force-app/main/default/objects/CommercientSF__InvMasterPlus__c/fields/CommercientSF__Gauge__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Gauge__c</fullName>
    <description>Gauge</description>
    <label>Gauge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>