force-app/main/default/objects/CommercientSF__InvMasterPlus__c/fields/CommercientSF__ProductCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProductCode__c</fullName>
    <description>ProductCode</description>
    <label>ProductCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>