force-app/main/default/objects/CommercientSF__InvMasterPlus__c/fields/CommercientSF__Syspro_Inventory_Master__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Inventory_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Inventory Master</label>
    <referenceTo>CommercientSF__InvMaster__c</referenceTo>
    <relationshipLabel>Syspro Inventory Master Pluss</relationshipLabel>
    <relationshipName>Syspro_Inventory_Master_Pluss</relationshipName>
    <type>Lookup</type>
</CustomField>