force-app/main/default/objects/CommercientSF__InvMasterPlus__c/fields/CommercientSF__Weight__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Weight__c</fullName>
    <description>Weight</description>
    <label>Weight</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>